@@ -5,6 +5,7 @@ Revision history for Perl application Lstu
 	- Option to disable the spamhaus check (#29)
 	- Option to blacklist and/or whitelist domains (#30)
 	- Option to set the maximum number of redirections (#31)
+	- Instance statistics available at /fullstats URL
 
 0.08 Wed Feb 08 18:49:00 2017 +0100
 	- Add Piwik tracking option
